--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background: url('background.jpg') no-repeat center center fixed;
+            background: url('Background.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
