--- a/Utama.html
+++ b/Utama.html
@@ -113,7 +113,7 @@
     </audio>
 
     <div class="image-row">
-        <img src="Girl.jpg" alt="">
+        <img src="Girlfriend.jpg" alt="">
         <img src="Boys.jpg" alt="">
     </div>
 
