--- a/Utama.html
+++ b/Utama.html
@@ -113,8 +113,8 @@
     </audio>
 
     <div class="image-row">
-        <img src="Girlfriend.jpg" alt="">
-        <img src="Boys.jpg" alt="">
+        <img src="boy.jpg" alt="">
+        <img src="girl.jpg" alt="">
     </div>
 
     <div class="title">Happy Couple Day</div>
